# oasis

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  spec.md
.github/workflows/: python-ci.yml
prompt-logs/: 01-initial-commit.md  02-first-pass.md  03-UI.md  05-config.md  07-fix-api.md  09-add-compare.md  10-multi-ticker-compare.md  11-CLI.md
stock_advisor/: __init__.py  __main__.py  config_settings.py  openai_client.py
stock_advisor/api/: gpt_interface.py  insights.py  query.py  stock_fetch.py
stock_advisor/config/: secrets.py
stock_advisor/dev/: dev.py
stock_advisor/visuals/: chart_bar.py  chart_candlestick.py  chart_line.py  chart_volatility.py
tests/: conftest.py  test_charts.py  test_cli.py  test_gpt_interface.py  test_insights.py  test_main.py  test_openai_client.py  test_openai_integration.py  test_query_routing.py  test_secrets.py  test_stock_fetch.py
