[project]
name = "stock-advisor"
version = "0.1.0"
description = "LLM-assisted stock visualization tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Oasis Contributors"}]
dependencies = [
    "openai==1.30.1",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "yfinance==0.2.37",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

