[project]
name = "stock-advisor"
version = "0.1.0"
description = "LLM-assisted stock visualization tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Oasis Contributors"}]
dependencies = [
    "openai==1.58",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "yfinance>=0.2.57",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "black==24.4.2",
    "pre-commit==3.7.0",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=stock_advisor --cov-fail-under=0"
testpaths = ["tests"]

[tool.black]
line-length = 88

